[package]
edition = "2021"
name = "rust_data_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
num = "0.4.0"
rand = "0.8.4" 
secded = "1.1.0" # Hamming code
serde = {version = "1.0.136", features = ["derive"]} 
serde_json = "1.0" 
websocket = "0.26.2"
