[package]
edition = "2021"
name = "rust_data_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.9.1"
nom = "7.1.0" 
num = "0.4.0" 
rand = "0.8.4" 
rocket = {version = "0.5.0-rc.1", features = ["json"]} 
serde = {version = "1.0.136", features = ["derive"]} 
serde_json = "1.0"
